input ipaddr of es6 to feed data
Change-Id: Idba6e078fbaae26bdee432548782935da0e71685

--- a/elk6/ncedc-earthquakes-filebeat.yml
+++ b/elk6/ncedc-earthquakes-filebeat.yml
@@ -14,7 +14,7 @@ filebeat.prospectors:
     type: blast
 
 output.elasticsearch:
-  hosts: ["10.21.5.111:9200"]
+  hosts: ["localhost:9200"]
   index: "ncedc-earthquakes"
   pipeline: ncedc-earthquakes
   indices:
