use hostname:es6
Change-Id: I06e706d98c3e261726d6437107588b342ffc46ef

--- a/elk6/ncedc-earthquakes-filebeat.yml
+++ b/elk6/ncedc-earthquakes-filebeat.yml
@@ -14,7 +14,7 @@ filebeat.prospectors:
     type: blast
 
 output.elasticsearch:
-  hosts: ["localhost:9200"]
+  hosts: ["es6:9200"]
   index: "ncedc-earthquakes"
   pipeline: ncedc-earthquakes
   indices:
