check feeding process
Change-Id: I98bb3638fdf8146e06836fc8eb383205667cb370

--- a/elk6/Dockerfile-filebeat
+++ b/elk6/Dockerfile-filebeat
@@ -59,4 +59,4 @@ COPY filebeat-entrypoint.sh /
 ENTRYPOINT ["/filebeat-entrypoint.sh"]
 
 ### Start to feed
-CMD ["/bin/bash", "-c", "./filebeat -e -c ncedc-earthquakes-filebeat.yml"]
+#CMD ["/bin/bash", "-c", "./filebeat -e -c ncedc-earthquakes-filebeat.yml"]
