implement service with all three
Change-Id: Id74ce238b6d7f0e2e7732304f5bbb083fc47a9ad

--- a/elk6/Dockerfile-filebeat
+++ b/elk6/Dockerfile-filebeat
@@ -56,7 +56,10 @@ RUN rm -rf data/ \
  && chmod go-w ./filebeat.yml
 
 COPY filebeat-entrypoint.sh /
-ENTRYPOINT ["/filebeat-entrypoint.sh"]
+COPY wait-for-it.sh /
+
+#ENTRYPOINT ["/filebeat-entrypoint.sh"]
 
 ### Start to feed
+CMD ["/filebeat-entrypoint.sh"]
 #CMD ["/bin/bash", "-c", "./filebeat -e -c ncedc-earthquakes-filebeat.yml"]
